; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_lua_cjson.c_json_parse_array_context.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_lua_cjson.c_json_parse_array_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }

@T_ARR_END = common dso_local global i64 0, align 8
@T_COMMA = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [19 x i8] c"comma or array end\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @json_parse_array_context to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @json_parse_array_context(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @json_decode_descend(i32* %7, i32* %8, i32 2)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @lua_newtable(i32* %10)
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @json_next_token(i32* %12, %struct.TYPE_5__* %5)
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @T_ARR_END, align 8
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @json_decode_ascend(i32* %19)
  br label %53

21:                                               ; preds = %2
  store i32 1, i32* %6, align 4
  br label %22

22:                                               ; preds = %50, %21
  %23 = load i32*, i32** %3, align 8
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @json_process_value(i32* %23, i32* %24, %struct.TYPE_5__* %5)
  %26 = load i32*, i32** %3, align 8
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @lua_rawseti(i32* %26, i32 -2, i32 %27)
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @json_next_token(i32* %29, %struct.TYPE_5__* %5)
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @T_ARR_END, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %22
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @json_decode_ascend(i32* %36)
  br label %53

38:                                               ; preds = %22
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @T_COMMA, align 8
  %42 = icmp ne i64 %40, %41
  br i1 %42, label %43, label %47

43:                                               ; preds = %38
  %44 = load i32*, i32** %3, align 8
  %45 = load i32*, i32** %4, align 8
  %46 = call i32 @json_throw_parse_error(i32* %44, i32* %45, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), %struct.TYPE_5__* %5)
  br label %47

47:                                               ; preds = %43, %38
  %48 = load i32*, i32** %4, align 8
  %49 = call i32 @json_next_token(i32* %48, %struct.TYPE_5__* %5)
  br label %50

50:                                               ; preds = %47
  %51 = load i32, i32* %6, align 4
  %52 = add nsw i32 %51, 1
  store i32 %52, i32* %6, align 4
  br label %22

53:                                               ; preds = %35, %18
  ret void
}

declare dso_local i32 @json_decode_descend(i32*, i32*, i32) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @json_next_token(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @json_decode_ascend(i32*) #1

declare dso_local i32 @json_process_value(i32*, i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @lua_rawseti(i32*, i32, i32) #1

declare dso_local i32 @json_throw_parse_error(i32*, i32*, i8*, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
